Wed Oct 30 12:08:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_uniq_bang): use rb_ary_modify_check() instead of
	  rb_ary_modify() because the array will be unshared soon.

Wed Oct 30 03:25:10 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: make less garbage when
	  testing if a string is binary.

Wed Oct 30 03:08:24 2013  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: string subclasses should
	  not be considered to be binary.  Fixes Psych / GH 166
	  https://github.com/tenderlove/psych/issues/166

	* test/psych/test_string.rb: test for fix

Tue Oct 29 23:01:18 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_zip): some refactoring.

Tue Oct 29 22:11:37 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_uniq_bang): use st_foreach() instead of for loop.

Tue Oct 29 20:01:58 2013  Koichi Sasada  <ko1@atdot.net>

	* add RUBY_TYPED_FREE_IMMEDIATELY to data types which only use
	  safe functions during garbage collection such as xfree().

	  On default, T_DATA objects are freed at same points as fianlizers.
	  This approach protects issues such as reported by [ruby-dev:35578].
	  However, freeing T_DATA objects immediately helps heap usage.

	  Most of T_DATA (in other words, most of dfree functions) are safe.
	  However, we turned off RUBY_TYPED_FREE_IMMEDIATELY by default
	  for safety.

	* cont.c: ditto.

	* dir.c: ditto.

	* encoding.c: ditto.

	* enumerator.c: ditto.

	* error.c: ditto.

	* file.c: ditto.

	* gc.c: ditto.

	* io.c: ditto.

	* iseq.c: ditto.

	* marshal.c: ditto.

	* parse.y: ditto.

	* proc.c: ditto.

	* process.c: ditto.

	* random.c: ditto.

	* thread.c: ditto.

	* time.c: ditto.

	* transcode.c: ditto.

	* variable.c: ditto.

	* vm.c: ditto.

	* vm_backtrace.c: ditto.

	* vm_trace.c: ditto.

	* ext/bigdecimal/bigdecimal.c: ditto.

	* ext/objspace/objspace.c: ditto.
